Mi tercero div con cursiva

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<body>
 		<div><p>Mi primera division</p><div>
 		<div><p><b>Mi segunda division</b></p><div>
+		<div><p><strong><em>Mi tercera division :D</strong></em></p><div>
 	</body>
 
 </html>
